--- a/app/index.html
+++ b/app/index.html
@@ -44,13 +44,35 @@
   <body ng-app="isbnStore">
 
     <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+      <ion-header-bar class="bar bar-header item-input-inset">
+                <!-- <div class="bar bar-header item-input-inset"> -->
+            <label class="item-input-wrapper">
+                <i class="icon ion-ios-search placeholder-icon"></i>
+                <input type="search" placeholder="Search" ng-model="search">
+            </label>
+            <button class="button button-clear">
+                Cancel
+            </button>
+        <!-- </div> -->
       </ion-header-bar>
       <ion-content>
+
         <div ng-controller="ExampleController">
-            <button ng-click="scanBarcode('fromISBNdb')">BUSCAR LIBRO EN ISBNDB</button>
-            <button ng-click="scanBarcode('fromOutpan')">BUSCAR LIBRO EN OUTPAN</button>
+            <button ng-click="scanBarcode('fromISBNdb')" class="button button-block button-positive">BUSCAR LIBRO EN ISBNDB</button>
+            <button ng-click="scanBarcode('fromOutpan')" class="button button-block button-positive">BUSCAR LIBRO EN OUTPAN</button>
+            <h1>LIBROS GUARDADOS</h1>
+            
+            <div class="card" ng-repeat="book in books | filter:search">
+                <div class="item item-divider">
+                    {{book.author}}
+                </div>
+                <div class="item item-text-wrap">
+                    {{book.title}}
+                </div>
+                <div class="item item-divider">
+                    {{book.publisher}}
+                </div>
+            </div>
         </div>
       </ion-content>
     </ion-pane>
